Fix WS endpoints and readability

--- a/app/css/armada.css
+++ b/app/css/armada.css
@@ -3,6 +3,7 @@
     padding-left: 80px;
     position: absolute;
     width: 100%;
+    height: 197px;
     background-color: rgba(0, 0, 0, 0.65);
 }
 
